Fix subtitle overflow

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,6 @@ nav {
 }
 
 .subtitle {
-  width: 100%;
   background-color: rgb(201, 65, 140);
   font-size: 16px;
   margin: 0;
@@ -175,7 +174,7 @@ nav {
 }
 
 #select-filter {
-  font-size: 20px;
+  font-size: 18px;
   width: 50%;
   color: whitesmoke;
   background-color: rgb(180, 57, 125);
